# code-review-plus

./: .bumpversion.cfg  .gitignore  Makefile  config-sample.toml  default_config.toml  pyproject.toml
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
code_review/: __init__.py  cli.py  config.py  enums.py  exceptions.py  schemas.py  settings.py
code_review/adapters/: changelog.py  setup_adapters.py
code_review/coverage/: handlers.py  main.py
code_review/dependencies/pip/: handlers.py  schemas.py
code_review/docker/: schemas.py
code_review/docker/docker_files/: handlers.py
code_review/docker_hub/: main.py  schemas.py
code_review/docker_hub/filters/: exclusions.py  inclusions.py
code_review/git/: adapters.py  handlers.py  main.py  schemas.py
code_review/handlers/: display_handlers.py  file_handlers.py  validation_handlers.py
code_review/review/: adapters.py  enums.py  handlers.py  main.py  schemas.py
code_review/yaml/: adapters.py
specs/001-i-want-to/: spec.md
specs/002-rule-violation-reporting/: spec.md
specs/003-rule-validation-reporting/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py  tools.py
tests/fixtures/: bumpversion.cfg  condo_models.py  condo_models_ast.json  gitlab-ci.yml  python_tags.json  setup.cfg
tests/unit/: test_backward_compatibility.py  test_cli_filtering.py  test_config.py  test_enhanced_rules_result.py  test_schemas.py  test_validation_filtering.py
(+79 files in other folders)
