[project]
name = "code-review-plus"
version = "0.1.1"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "rich>=14.1.0",
]
[project.scripts]
code-review-plus = "code_review.git.main:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
]
